# multi-client-data-pipeline

./: .gitignore  pyproject.toml
01-Project-Kickoff/: .envrc  Dockerfile  obtenir_token.sh  pyproject.toml  run_server.py
01-Project-Kickoff/airflow_docker/: docker-compose.yml  orchestrate_dag.py
01-Project-Kickoff/app/: create_table.py  fetch_and_upload_data.py  main.py  schemas.py
dbt_product_tables/: README.md  dbt_project.yml
dbt_product_tables/models/client_a/: clientA.sql
dbt_product_tables/models/client_b/: clientB.sql  inventory_clientB.sql  transaction_clientB.sql
dbt_product_tables/models/example/: schema.yml
dbt_product_tables/models/mart/: client.sql  clientA.sql  clientB.sql  date_dim.sql  inventory.sql  inventory_clientA.sql  porduct.sql  product.sql  product_clientA.sql  product_clientB.sql  stg_view_konv.sql  stg_view_mbew.sql  stg_view_vbak.sql  stg_view_vbap.sql  transaction.sql  transaction_clientA.sql
dbt_product_tables/models/source/: sources.yml
dbt_product_tables/models/staging/: schema.yml  stg_makt.sql
