[tool.poetry]
name = "multi-client-data-pipeline"
version = "0.1.0"
description = ""
authors = ["miguel vian <miguel.vian@live.com.pt>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dbt-core = "^1.8.8"
dbt-bigquery = "^1.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dbt = "dbt.main:main"
